✨ Fix profile social overflow

--- a/frontend/src/components/system-design/shared/social/Social.module.scss
+++ b/frontend/src/components/system-design/shared/social/Social.module.scss
@@ -18,6 +18,8 @@
 
     & > li {
         margin-top: 8px;
+        word-break: keep-all;
+        overflow-wrap: anywhere;
     }
     
     & > li:not(:last-child) {
